--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-traverse": "6.22.1",
+    "babel-types": "6.22.0",
     "babylon": "6.15.0"
   },
   "devDependencies": {
